# AttentionLikelihood

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  pyproject.toml  setup.cfg
src/attlike/: analyze_likelihood_attention.ipynb  encode_likelihood_attention.ipynb  utils.py
